--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>seasons</title>
@@ -37,6 +38,6 @@ Subtropical and tropical areas have climates better described in terms of other 
      
   </main> 
   <footer> &copy;2021</footer>
-  
+  <script src="app.js"></script>
 </body>
 </html>
